--- a/about/index.html
+++ b/about/index.html
@@ -64,6 +64,49 @@
       ></iframe
     ></noscript>
     <a id="pagetop"></a>
+    <span class="to-top"> &#8679; </span>
+    <header>
+      <nav class="container">
+        <div class="navbar">
+          <div class="nav-logo">
+            <a href="./index.html"> 橋本農場 </a>
+          </div>
+          <div class="menu-list">
+            <ul>
+              <li>
+                <a href="./index.html">ホーム</a>
+              </li>
+              <li>
+                <a href="./about/index.html">橋本農場</a>
+              </li>
+              <li>
+                <a href="#top-making">お米を作る工程</a>
+              </li>
+              <li>
+                <a href="./shopping/index.html">お届けする商品</a>
+              </li>
+              <li>
+                <a href="./contact/index.html">お問い合わせ</a>
+              </li>
+              <li>
+                <a href="./contact/index.html" class="btn-shopping">
+                  <span>
+                    <span> お問い合わせ </span>
+                    <span></span>
+                  </span>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="ham-btn">
+            <span class="bar1"></span>
+            <span class="bar2"></span>
+            <span class="bar3"></span>
+          </div>
+        </div>
+      </nav>
+    </header>
+
     <main role="main" class="">
       <section class="container page-about">
         <div class="catch">
@@ -230,67 +273,90 @@
       </section>
     </main>
 
-    <!-- InstanceEndEditable --><!-- #BeginLibraryItem "/Library/footer.lbi" -->
     <footer class="footer">
-      <div class="container">
-        <div class="footer-contact row">
-          <div class="col">
-            <h2 class="section-title__en">SNS ACCOUNT</h2>
-            <p class="font-large font-bold">
-              日々の我が家のお米づくりを<br class="u-br-sp" />発信しています。
-            </p>
-            <ul class="footer-sns-list">
-              <li>
-                <a
-                  href="https://www.instagram.com/kubosantino.okome/"
-                  target="_blank"
-                  ><img
-                    src="../assets/img/common/footer/sns/ico--instagram.svg"
-                    alt="instagram"
-                /></a>
-              </li>
-              <li>
-                <a
-                  href="https://www.facebook.com/kubosantinookome"
-                  target="_blank"
-                  ><img
-                    src="../assets/img/common/footer/sns/ico--fb.svg"
-                    alt="facebook"
-                /></a>
-              </li>
-            </ul>
-          </div>
-          <div class="col">
-            <h2 class="section-title__en">CONTACT</h2>
-            <a href="tel:0978-32-4831" class="footer-contact__tel"
-              >0978-32-4831</a
-            >
-            <p class="mb-mainfont-bold">受付時間：10:00〜18:00(不定休)</p>
-            <p class="footer-contact__address font-bold">
-              〒879-0308
-              <br class="u-br-sp" />大分県宇佐市大字下高家１４６３番地
-            </p>
-            <a href="../contact/index.html" class="btn-shopping mb-sm"
-              >お問い合わせはこちら<img
-                src="../assets/img/common/btn/ico--btn-arrow.svg"
-                alt=""
-            /></a>
-            <div class="text-center">
-              <a href="../contact/privacy.html"><u>プライバシーポリシー</u></a>
+      <section class="footer-contact">
+        <div class="container">
+          <h2 class="section-main-title">お問い合わせ</h2>
+          <div class="row">
+            <div class="col">
+              <h3 class="section-title__en">SNS ACCOUNT</h3>
+              <p class="font-large font-bold text-left">
+                日々の我が家のお米づくりを発信しています。
+              </p>
+              <ul class="footer-sns-list">
+                <li>
+                  <a
+                    href="https://www.instagram.com/hashimoto.farming/"
+                    target="_blank"
+                    ><img
+                      src="assets/img/common/footer/sns/ico--instagram.svg"
+                      alt="instagram"
+                  /></a>
+                </li>
+                <li>
+                  <a
+                    href="https://www.facebook.com/hashimoto.farming"
+                    target="_blank"
+                    ><img
+                      src="assets/img/common/footer/sns/ico--fb.svg"
+                      alt="facebook"
+                  /></a>
+                </li>
+              </ul>
+            </div>
+            <div class="col">
+              <h3 class="section-title__en">CONTACT</h3>
+              <a href="tel:025-523-7139" class="footer-contact__tel"
+                >025-523-7139</a
+              >
+              <p class="mb-mainfont-bold">受付時間：10:00〜18:00(不定休)</p>
+              <p class="footer-contact__address font-bold">
+                〒943-0186 <br class="u-br-sp" />新潟県上越市大字市野江353番地1
+              </p>
+              <a href="./contact/index.html" class="btn-shopping mb-sm">
+                <span>
+                  <span> お問い合わせはこちら </span>
+                  <span></span>
+                </span>
+              </a>
+              <div class="text-center">
+                <a href=""><u>プライバシーポリシー</u></a>
+              </div>
             </div>
           </div>
         </div>
-        <div class="footer-bottom">
-          <img
-            src="../assets/img/common/footer/log--sitename.png"
-            alt="久保さんちのお米"
-            class="footer-logo"
-          />
-          <small class="copy">&copy; 2023 KUBOSAN CHI NO OKOME.</small>
+      </section>
+      <section class="footer-bottom">
+        <div class="container">
+          <div class="footer-bottom-row">
+            <div>
+              <img src="../assets/img/common/header/logo.png" alt="logo" />
+            </div>
+            <div class="menu-list">
+              <ul>
+                <li>
+                  <a href="./index.html">ホーム</a>
+                </li>
+                <li>
+                  <a href="./about/index.html">橋本農場</a>
+                </li>
+                <li>
+                  <a href="#top-making">お米を作る工程</a>
+                </li>
+                <li>
+                  <a href="./shopping/index.html">お届けする商品</a>
+                </li>
+                <li>
+                  <a href="./contact/index.html">お問い合わせ</a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
+      </section>
+      <div class="copy">
+        <small>&copy; 2024 HASHIMOTO farming</small>
       </div>
     </footer>
-    <!-- #EndLibraryItem -->
   </body>
-  <!-- InstanceEnd -->
 </html>
