--- a/contact/index.html
+++ b/contact/index.html
@@ -66,199 +66,270 @@
       ></iframe
     ></noscript>
     <a id="pagetop"></a>
-    <main role="main" class="">
-      <section class="container page-contact">
-        <div class="catch">
-          <div class="catch__en">CONTACT</div>
-          <h1 class="catch__jp">お問い合わせ</h1>
-        </div>
-        <section class="page-lead">
-          <div class="page-lead__content">
-            お米についてのご相談、<br
-              class="u-br-sp"
-            />ご購入についてのご連絡は<br />
-            下記フォームまたはお電話にて<br
-              class="u-br-sp"
-            />お気軽にお問い合わせください。
-            <a href="tel:0978-32-4831" class="tel"
-              ><img
-                src="../assets/img/common/ico/ico--tel.svg"
-                alt=""
-              />0978-32-4831</a
-            >
-            受付時間：10:00〜18:00(不定休)
+    <span class="to-top"> &#8679; </span>
+    <header>
+      <nav class="container">
+        <div class="navbar">
+          <div class="nav-logo">
+            <a href="./index.html"> 橋本農場 </a>
           </div>
-        </section>
-        <div class="contact-section">
-          <div id="wufoo-mlenslb04p1r5y">
-            Fill out my
-            <a href="https://lplanning.wufoo.com/forms/mlenslb04p1r5y"
-              >online form</a
-            >.
-          </div>
-          <script type="text/javascript">
-            var mlenslb04p1r5y;
-            (function (d, t) {
-              var s = d.createElement(t),
-                options = {
-                  userName: "lplanning",
-                  formHash: "mlenslb04p1r5y",
-                  autoResize: true,
-                  height: "572",
-                  async: true,
-                  host: "wufoo.com",
-                  header: "show",
-                  ssl: true,
-                };
-              s.src =
-                ("https:" == d.location.protocol ? "https://" : "http://") +
-                "secure.wufoo.com/scripts/embed/form.js";
-              s.onload = s.onreadystatechange = function () {
-                var rs = this.readyState;
-                if (rs) if (rs != "complete") if (rs != "loaded") return;
-                try {
-                  mlenslb04p1r5y = new WufooForm();
-                  mlenslb04p1r5y.initialize(options);
-                  mlenslb04p1r5y.display();
-                } catch (e) {}
-              };
-              var scr = d.getElementsByTagName(t)[0],
-                par = scr.parentNode;
-              par.insertBefore(s, scr);
-            })(document, "script");
-          </script>
-        </div>
-        <!-- #BeginLibraryItem "/Library/other-contents.lbi" -->
-        <section class="section-others">
-          <h2 class="section-others__title">OTHER CONTENTS</h2>
-          <ul class="section-others__list">
-            <li>
-              <a href="../place/index.html" class="section-others__item">
-                <img
-                  src="../assets/img/common/others/pic--01.jpg"
-                  alt=""
-                  class="section-others__image"
-                />
-                <div class="section-others__txt">お米が育つ場所</div>
-              </a>
-            </li>
-            <li>
-              <a href="../about/index.html" class="section-others__item">
-                <img
-                  src="../assets/img/common/others/pic--02.jpg"
-                  alt=""
-                  class="section-others__image"
-                />
-                <div class="section-others__txt">久保さんち</div>
-              </a>
-            </li>
-            <li>
-              <a href="../feature/index.html" class="section-others__item">
-                <img
-                  src="../assets/img/common/others/pic--03.jpg"
-                  alt=""
-                  class="section-others__image"
-                />
-                <div class="section-others__txt">違いを作るお米育て</div>
-              </a>
-            </li>
-            <li>
-              <a href="../delivery/index.html" class="section-others__item">
-                <img
-                  src="../assets/img/common/others/pic--04.jpg"
-                  alt=""
-                  class="section-others__image"
-                />
-                <div class="section-others__txt">こんなお届けできます</div>
-              </a>
-            </li>
-            <li>
-              <a href="../cook/index.html" class="section-others__item">
-                <img
-                  src="../assets/img/common/others/pic--05.jpg"
-                  alt=""
-                  class="section-others__image"
-                />
-                <div class="section-others__txt">どんな炊飯器でも</div>
-              </a>
-            </li>
-            <li>
-              <a href="../safety/index.html" class="section-others__item">
-                <img
-                  src="../assets/img/common/others/pic--06.jpg"
-                  alt=""
-                  class="section-others__image"
-                />
-                <div class="section-others__txt">安全・安心のために</div>
-              </a>
-            </li>
-          </ul>
-        </section>
-        <!-- #EndLibraryItem -->
-      </section>
-    </main>
-
-    <!-- InstanceEndEditable --><!-- #BeginLibraryItem "/Library/footer.lbi" -->
-    <footer class="footer">
-      <div class="container">
-        <div class="footer-contact row">
-          <div class="col">
-            <h2 class="section-title__en">SNS ACCOUNT</h2>
-            <p class="font-large font-bold">
-              日々の我が家のお米づくりを<br class="u-br-sp" />発信しています。
-            </p>
-            <ul class="footer-sns-list">
+          <div class="menu-list">
+            <ul>
               <li>
-                <a
-                  href="https://www.instagram.com/kubosantino.okome/"
-                  target="_blank"
-                  ><img
-                    src="../assets/img/common/footer/sns/ico--instagram.svg"
-                    alt="instagram"
-                /></a>
+                <a href="./index.html">ホーム</a>
               </li>
               <li>
-                <a
-                  href="https://www.facebook.com/kubosantinookome"
-                  target="_blank"
-                  ><img
-                    src="../assets/img/common/footer/sns/ico--fb.svg"
-                    alt="facebook"
-                /></a>
+                <a href="./about/index.html">橋本農場</a>
+              </li>
+              <li>
+                <a href="#top-making">お米を作る工程</a>
+              </li>
+              <li>
+                <a href="./shopping/index.html">お届けする商品</a>
+              </li>
+              <li>
+                <a href="./contact/index.html">お問い合わせ</a>
+              </li>
+              <li>
+                <a href="./contact/index.html" class="btn-shopping">
+                  <span>
+                    <span> お問い合わせ </span>
+                    <span></span>
+                  </span>
+                </a>
               </li>
             </ul>
           </div>
-          <div class="col">
-            <h2 class="section-title__en">CONTACT</h2>
-            <a href="tel:0978-32-4831" class="footer-contact__tel"
-              >0978-32-4831</a
-            >
-            <p class="mb-mainfont-bold">受付時間：10:00〜18:00(不定休)</p>
-            <p class="footer-contact__address font-bold">
-              〒879-0308
-              <br class="u-br-sp" />大分県宇佐市大字下高家１４６３番地
-            </p>
-            <a href="index.html" class="btn-shopping mb-sm"
-              >お問い合わせはこちら<img
-                src="../assets/img/common/btn/ico--btn-arrow.svg"
-                alt=""
-            /></a>
-            <div class="text-center">
-              <a href="privacy.html"><u>プライバシーポリシー</u></a>
+          <div class="ham-btn">
+            <span class="bar1"></span>
+            <span class="bar2"></span>
+            <span class="bar3"></span>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <main class="">
+      <div class="page-contact">
+        <section class="catch">
+          <div class="container">
+            <div class="catch__en">CONTACT</div>
+            <h1 class="catch__jp">お問い合わせ</h1>
+          </div>
+        </section>
+        <section class="page-lead">
+          <div class="container">
+            <div class="page-lead__content">
+              お米についてのご相談、<br
+                class="u-br-sp"
+              />ご購入についてのご連絡は<br />
+              下記フォームまたはお電話にて<br
+                class="u-br-sp"
+              />お気軽にお問い合わせください。
+              <a href="tel:0978-32-4831" class="tel"
+                ><img
+                  src="../assets/img/common/ico/ico--tel.svg"
+                  alt=""
+                />0978-32-4831</a
+              >
+              受付時間：10:00〜18:00(不定休)
+            </div>
+          </div>
+        </section>
+        <section class="contact-section">
+          <div class="contai">
+            <div id="wufoo-mlenslb04p1r5y">
+              Fill out my
+              <a href="https://lplanning.wufoo.com/forms/mlenslb04p1r5y"
+                >online form</a
+              >.
+            </div>
+            <script type="text/javascript">
+              var mlenslb04p1r5y;
+              (function (d, t) {
+                var s = d.createElement(t),
+                  options = {
+                    userName: "lplanning",
+                    formHash: "mlenslb04p1r5y",
+                    autoResize: true,
+                    height: "572",
+                    async: true,
+                    host: "wufoo.com",
+                    header: "show",
+                    ssl: true,
+                  };
+                s.src =
+                  ("https:" == d.location.protocol ? "https://" : "http://") +
+                  "secure.wufoo.com/scripts/embed/form.js";
+                s.onload = s.onreadystatechange = function () {
+                  var rs = this.readyState;
+                  if (rs) if (rs != "complete") if (rs != "loaded") return;
+                  try {
+                    mlenslb04p1r5y = new WufooForm();
+                    mlenslb04p1r5y.initialize(options);
+                    mlenslb04p1r5y.display();
+                  } catch (e) {}
+                };
+                var scr = d.getElementsByTagName(t)[0],
+                  par = scr.parentNode;
+                par.insertBefore(s, scr);
+              })(document, "script");
+            </script>
+          </div>
+        </section>
+        <section class="section-others">
+          <div class="container">
+            <h2 class="section-others__title">OTHER CONTENTS</h2>
+            <ul class="section-others__list">
+              <li>
+                <a href="../place/index.html" class="section-others__item">
+                  <img
+                    src="../assets/img/common/others/pic--01.jpg"
+                    alt=""
+                    class="section-others__image"
+                  />
+                  <div class="section-others__txt">お米が育つ場所</div>
+                </a>
+              </li>
+              <li>
+                <a href="../about/index.html" class="section-others__item">
+                  <img
+                    src="../assets/img/common/others/pic--02.jpg"
+                    alt=""
+                    class="section-others__image"
+                  />
+                  <div class="section-others__txt">久保さんち</div>
+                </a>
+              </li>
+              <li>
+                <a href="../feature/index.html" class="section-others__item">
+                  <img
+                    src="../assets/img/common/others/pic--03.jpg"
+                    alt=""
+                    class="section-others__image"
+                  />
+                  <div class="section-others__txt">違いを作るお米育て</div>
+                </a>
+              </li>
+              <li>
+                <a href="../delivery/index.html" class="section-others__item">
+                  <img
+                    src="../assets/img/common/others/pic--04.jpg"
+                    alt=""
+                    class="section-others__image"
+                  />
+                  <div class="section-others__txt">こんなお届けできます</div>
+                </a>
+              </li>
+              <li>
+                <a href="../cook/index.html" class="section-others__item">
+                  <img
+                    src="../assets/img/common/others/pic--05.jpg"
+                    alt=""
+                    class="section-others__image"
+                  />
+                  <div class="section-others__txt">どんな炊飯器でも</div>
+                </a>
+              </li>
+              <li>
+                <a href="../safety/index.html" class="section-others__item">
+                  <img
+                    src="../assets/img/common/others/pic--06.jpg"
+                    alt=""
+                    class="section-others__image"
+                  />
+                  <div class="section-others__txt">安全・安心のために</div>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </section>
+      </div>
+    </main>
+
+    <footer class="footer">
+      <section class="footer-contact">
+        <div class="container">
+          <h2 class="section-main-title">お問い合わせ</h2>
+          <div class="row">
+            <div class="col">
+              <h3 class="section-title__en">SNS ACCOUNT</h3>
+              <p class="font-large font-bold text-left">
+                日々の我が家のお米づくりを発信しています。
+              </p>
+              <ul class="footer-sns-list">
+                <li>
+                  <a
+                    href="https://www.instagram.com/hashimoto.farming/"
+                    target="_blank"
+                    ><img
+                      src="assets/img/common/footer/sns/ico--instagram.svg"
+                      alt="instagram"
+                  /></a>
+                </li>
+                <li>
+                  <a
+                    href="https://www.facebook.com/hashimoto.farming"
+                    target="_blank"
+                    ><img
+                      src="assets/img/common/footer/sns/ico--fb.svg"
+                      alt="facebook"
+                  /></a>
+                </li>
+              </ul>
+            </div>
+            <div class="col">
+              <h3 class="section-title__en">CONTACT</h3>
+              <a href="tel:025-523-7139" class="footer-contact__tel"
+                >025-523-7139</a
+              >
+              <p class="mb-mainfont-bold">受付時間：10:00〜18:00(不定休)</p>
+              <p class="footer-contact__address font-bold">
+                〒943-0186 <br class="u-br-sp" />新潟県上越市大字市野江353番地1
+              </p>
+              <a href="./contact/index.html" class="btn-shopping mb-sm">
+                <span>
+                  <span> お問い合わせはこちら </span>
+                  <span></span>
+                </span>
+              </a>
+              <div class="text-center">
+                <a href=""><u>プライバシーポリシー</u></a>
+              </div>
             </div>
           </div>
         </div>
-        <div class="footer-bottom">
-          <img
-            src="../assets/img/common/footer/log--sitename.svg"
-            alt="久保さんちのお米"
-            class="footer-logo"
-          />
-          <small class="copy">&copy; 2023 KUBOSAN CHI NO OKOME.</small>
+      </section>
+      <section class="footer-bottom">
+        <div class="container">
+          <div class="footer-bottom-row">
+            <div>
+              <img src="../assets/img/common/header/logo.png" alt="logo" />
+            </div>
+            <div class="menu-list">
+              <ul>
+                <li>
+                  <a href="./index.html">ホーム</a>
+                </li>
+                <li>
+                  <a href="./about/index.html">橋本農場</a>
+                </li>
+                <li>
+                  <a href="#top-making">お米を作る工程</a>
+                </li>
+                <li>
+                  <a href="./shopping/index.html">お届けする商品</a>
+                </li>
+                <li>
+                  <a href="./contact/index.html">お問い合わせ</a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
+      </section>
+      <div class="copy">
+        <small>&copy; 2024 HASHIMOTO farming</small>
       </div>
     </footer>
-    <!-- #EndLibraryItem -->
   </body>
-  <!-- InstanceEnd -->
 </html>
