--- a/index.html
+++ b/index.html
@@ -100,9 +100,14 @@
                 <a href="./shopping/index.html">お届けする商品</a>
               </li>
               <li>
-                <a href="./contact/index.html"
-                  >お問い合わせ
-                  <img src="assets/img/common/btn/ico--btn-arrow.svg" alt="" />
+                <a href="./contact/index.html">お問い合わせ</a>
+              </li>
+              <li>
+                <a href="./contact/index.html" class="btn-shopping">
+                  <span>
+                    <span> お問い合わせ </span>
+                    <span></span>
+                  </span>
                 </a>
               </li>
             </ul>
@@ -119,7 +124,7 @@
     <main role="main">
       <section class="top-main-wrapper" id="top">
         <div class="top-main scroll-point"></div>
-        <div data-top-hero-scroll="" class="top-hero__scroll__inner">
+        <div class="top-hero__scroll__inner">
           <svg
             role="img"
             aria-hidden="true"
@@ -838,14 +843,14 @@
     </main>
 
     <footer class="footer">
-      <div class="footer-contact">
+      <section class="footer-contact">
         <div class="container">
           <h2 class="section-main-title">お問い合わせ</h2>
           <div class="row">
             <div class="col">
               <h3 class="section-title__en">SNS ACCOUNT</h3>
-              <p class="font-large font-bold">
-                日々の我が家のお米づくりを<br class="u-br-sp" />発信しています。
+              <p class="font-large font-bold text-left">
+                日々の我が家のお米づくりを発信しています。
               </p>
               <ul class="footer-sns-list">
                 <li>
@@ -877,27 +882,49 @@
               <p class="footer-contact__address font-bold">
                 〒943-0186 <br class="u-br-sp" />新潟県上越市大字市野江353番地1
               </p>
-              <a href="./contact/index.html" class="btn-shopping mb-sm"
-                >お問い合わせはこちら<img
-                  src="assets/img/common/btn/ico--btn-arrow.svg"
-                  alt=""
-              /></a>
+              <a href="./contact/index.html" class="btn-shopping mb-sm">
+                <span>
+                  <span> お問い合わせはこちら </span>
+                  <span></span>
+                </span>
+              </a>
               <div class="text-center">
                 <a href=""><u>プライバシーポリシー</u></a>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="footer-bottom">
+      </section>
+      <section class="footer-bottom">
         <div class="container">
-          <img
-            src="assets/img/common/footer/log--sitename.png"
-            alt="久保さんちのお米"
-            class="footer-logo"
-          />
-          <small class="copy">&copy; 2024 HASHIMOTO farming</small>
+          <div class="footer-bottom-row">
+            <div>
+              <img src="./assets/img/common/header/logo.png" alt="logo" />
+            </div>
+            <div class="menu-list">
+              <ul>
+                <li>
+                  <a href="./index.html">ホーム</a>
+                </li>
+                <li>
+                  <a href="./about/index.html">橋本農場</a>
+                </li>
+                <li>
+                  <a href="#top-making">お米を作る工程</a>
+                </li>
+                <li>
+                  <a href="./shopping/index.html">お届けする商品</a>
+                </li>
+                <li>
+                  <a href="./shopping/index.html">お問い合わせ</a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
+      </section>
+      <div class="copy">
+        <small>&copy; 2024 HASHIMOTO farming</small>
       </div>
     </footer>
   </body>
