--- a/about/index.html
+++ b/about/index.html
@@ -54,16 +54,8 @@
     <link rel="stylesheet" href="../assets/css/page.css" />
   </head>
 
-  <body class="">
-    <noscript
-      ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-W9XWR8B"
-        height="0"
-        width="0"
-        style="display: none; visibility: hidden"
-      ></iframe
-    ></noscript>
-    <a id="pagetop"></a>
+  <body>
+    <div id="pagetop"></div>
     <span class="to-top"> &#8679; </span>
     <header>
       <nav class="container">
@@ -89,7 +81,7 @@
                 <a href="./contact/index.html">お問い合わせ</a>
               </li>
               <li>
-                <a href="./contact/index.html" class="btn-shopping">
+                <a href="./contact/index.html" class="btn-outline">
                   <span>
                     <span> お問い合わせ </span>
                     <span></span>
@@ -107,169 +99,182 @@
       </nav>
     </header>
 
-    <main role="main" class="">
-      <section class="container page-about">
-        <div class="catch">
-          <div class="catch__en">KUBO SAN CHI</div>
-          <h1 class="catch__jp">久保さんち</h1>
-        </div>
-        <section class="page-lead">
-          <h2 class="page-lead__title">疑問に思っていた販売⽅法。</h2>
-          <p class="page-lead__content">
-            2008年までは、私たちも作ったお⽶を卸売業者さんに卸していました。直接販売しなければ売り先には困らないので、経営は安定します。<br />
-            でも、私たちがこだわって作るお⽶が、他のお⽶と混ぜられて販売されることにどこか満⾜できず、直接販売に切り替える決意を固めました。
-          </p>
+    <main class="">
+      <section class="page-about">
+        <section class="catch">
+          <div class="container">
+            <div class="catch__en">KUBO SAN CHI</div>
+            <h1 class="catch__jp">久保さんち</h1>
+          </div>
         </section>
-        <div class="about-section01">
-          <img
-            src="../assets/img/about/section01/pic--01.png"
-            alt=""
-            class="animation-pic pic01 animation"
-          />
-          <img
-            src="../assets/img/about/section01/pic--02.png"
-            alt=""
-            class="animation-pic pic02 animation"
-          />
-          <img
-            src="../assets/img/about/section01/pic--03.png"
-            alt=""
-            class="animation-pic pic03 animation"
-          />
-          <img
-            src="../assets/img/about/section01/pic--04.png"
-            alt=""
-            class="animation-pic pic04 animation"
-          />
-          <img
-            src="../assets/img/about/section01/pic--05.png"
-            alt=""
-            class="animation-pic pic05 animation"
-          />
-          <img
-            src="../assets/img/about/section01/pic--06.png"
-            alt=""
-            class="animation-pic pic06 animation"
-          />
-        </div>
+        <section class="page-lead">
+          <div class="container">
+            <h2 class="section-main-title">疑問に思っていた販売⽅法。</h2>
+            <p class="page-lead__content">
+              2008年までは、私たちも作ったお⽶を卸売業者さんに卸していました。直接販売しなければ売り先には困らないので、経営は安定します。<br />
+              でも、私たちがこだわって作るお⽶が、他のお⽶と混ぜられて販売されることにどこか満⾜できず、直接販売に切り替える決意を固めました。
+            </p>
+          </div>
+        </section>
+        <section class="about-section01">
+          <div class="container">
+            <img
+              src="../assets/img/about/section01/pic--01.png"
+              alt=""
+              class="animation-pic pic01 animation"
+            />
+            <img
+              src="../assets/img/about/section01/pic--02.png"
+              alt=""
+              class="animation-pic pic02 animation"
+            />
+            <img
+              src="../assets/img/about/section01/pic--03.png"
+              alt=""
+              class="animation-pic pic03 animation"
+            />
+            <img
+              src="../assets/img/about/section01/pic--04.png"
+              alt=""
+              class="animation-pic pic04 animation"
+            />
+            <img
+              src="../assets/img/about/section01/pic--05.png"
+              alt=""
+              class="animation-pic pic05 animation"
+            />
+            <img
+              src="../assets/img/about/section01/pic--06.png"
+              alt=""
+              class="animation-pic pic06 animation"
+            />
+          </div>
+        </section>
         <section class="section-row about-section02">
-          <div class="row">
-            <div class="col">
-              <div class="section-title">
-                <h2 class="section-title__jp">浜⼩路 → 久保 → ⽥端</h2>
+          <div class="container">
+            <div class="row">
+              <div class="col">
+                <div class="section-title">
+                  <h2 class="section-title__jp">浜⼩路 → 久保 → ⽥端</h2>
+                </div>
+                <p>
+                  祖⽗⺟の代から数えて３代⽬にあたります。実は祖⽗⺟の姓は浜⼩路（はましょうじ）。⺟が継いだので⽗の姓となり、久保。そして私たちの代も娘が継いだので、夫の姓となり、⽥端。でも「久保さんちのお⽶」で名が通ってしまったので、混乱させてはいけないと考え「久保」で通すことにしました。わかりづらくてすみません。
+                </p>
               </div>
-              <p>
-                祖⽗⺟の代から数えて３代⽬にあたります。実は祖⽗⺟の姓は浜⼩路（はましょうじ）。⺟が継いだので⽗の姓となり、久保。そして私たちの代も娘が継いだので、夫の姓となり、⽥端。でも「久保さんちのお⽶」で名が通ってしまったので、混乱させてはいけないと考え「久保」で通すことにしました。わかりづらくてすみません。
-              </p>
-            </div>
-            <div class="col">
-              <img
-                src="../assets/img/about/section02/pic--01.png"
-                alt=""
-                class="animation-pic pic01 animation"
-              />
+              <div class="col">
+                <img
+                  src="../assets/img/about/section02/pic--01.png"
+                  alt=""
+                  class="animation-pic pic01 animation"
+                />
+              </div>
             </div>
           </div>
         </section>
         <section class="section-row about-section03">
-          <div class="row">
-            <div class="col">
-              <div class="section-title">
-                <h2 class="section-title__jp">企業勤めの経験が⼯夫させる。</h2>
+          <div class="container">
+            <div class="row">
+              <div class="col">
+                <div class="section-title">
+                  <h2 class="section-title__jp">
+                    企業勤めの経験が⼯夫させる。
+                  </h2>
+                </div>
+                <p>
+                  ⽗は45歳の時、祖⽗⺟の体のことを考えて⼤阪での機械のエンジニアの仕事を辞めて⼤分に来て、農業を始めました。夫も家族の時間をもちやすい農業に魅⼒を感じ、⼤阪の印刷会社での仕事を辞めて⼤分に。会社員時代のものづくりの経験が、さまざまな⼯夫に⽣きています。
+                </p>
               </div>
+              <div class="col">
+                <img
+                  src="../assets/img/about/section03/pic--01.png"
+                  alt=""
+                  class="animation-pic pic01 animation"
+                />
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="about-section04">
+          <div class="container">
+            <h2 class="section-main-title">
+              ⾯積が広ければ、<br class="u-br-sp" />経験も幅広くなる。
+            </h2>
+            <div class="about-section04__inner">
+              <div class="section-title"></div>
               <p>
-                ⽗は45歳の時、祖⽗⺟の体のことを考えて⼤阪での機械のエンジニアの仕事を辞めて⼤分に来て、農業を始めました。夫も家族の時間をもちやすい農業に魅⼒を感じ、⼤阪の印刷会社での仕事を辞めて⼤分に。会社員時代のものづくりの経験が、さまざまな⼯夫に⽣きています。
+                もちろん最初は素⼈。先代から教えてもらいながら始めました。ただし、作付け⾯積は東京ドーム８個分。広い⼟地でお⽶を栽培することは、その分たくさんの経験を積めるということ。<br />
+                作付けが７度に分かれているので、１年で７年分の⽶作りができる環境なのです。おいしいお⽶の栽培⽅法を考えては実⾏する⽇々を、常に楽しんでいます。
               </p>
             </div>
-            <div class="col">
-              <img
-                src="../assets/img/about/section03/pic--01.png"
-                alt=""
-                class="animation-pic pic01 animation"
-              />
-            </div>
           </div>
         </section>
-        <div class="about-section04">
-          <div class="about-section04__inner">
-            <div class="section-title">
-              <h2 class="section-title__jp">
-                ⾯積が広ければ、<br class="u-br-sp" />経験も幅広くなる。
-              </h2>
-            </div>
-            <p>
-              もちろん最初は素⼈。先代から教えてもらいながら始めました。ただし、作付け⾯積は東京ドーム８個分。広い⼟地でお⽶を栽培することは、その分たくさんの経験を積めるということ。<br />
-              作付けが７度に分かれているので、１年で７年分の⽶作りができる環境なのです。おいしいお⽶の栽培⽅法を考えては実⾏する⽇々を、常に楽しんでいます。
-            </p>
-          </div>
-        </div>
-        <!-- #BeginLibraryItem "/Library/other-contents.lbi" -->
         <section class="section-others">
-          <h2 class="section-others__title">OTHER CONTENTS</h2>
-          <ul class="section-others__list">
-            <li>
-              <a href="../place/index.html" class="section-others__item">
-                <img
-                  src="../assets/img/common/others/pic--01.jpg"
-                  alt=""
-                  class="section-others__image"
-                />
-                <div class="section-others__txt">お米が育つ場所</div>
-              </a>
-            </li>
-            <li>
-              <a href="index.html" class="section-others__item">
-                <img
-                  src="../assets/img/common/others/pic--02.jpg"
-                  alt=""
-                  class="section-others__image"
-                />
-                <div class="section-others__txt">久保さんち</div>
-              </a>
-            </li>
-            <li>
-              <a href="../feature/index.html" class="section-others__item">
-                <img
-                  src="../assets/img/common/others/pic--03.jpg"
-                  alt=""
-                  class="section-others__image"
-                />
-                <div class="section-others__txt">違いを作るお米育て</div>
-              </a>
-            </li>
-            <li>
-              <a href="../delivery/index.html" class="section-others__item">
-                <img
-                  src="../assets/img/common/others/pic--04.jpg"
-                  alt=""
-                  class="section-others__image"
-                />
-                <div class="section-others__txt">こんなお届けできます</div>
-              </a>
-            </li>
-            <li>
-              <a href="../cook/index.html" class="section-others__item">
-                <img
-                  src="../assets/img/common/others/pic--05.jpg"
-                  alt=""
-                  class="section-others__image"
-                />
-                <div class="section-others__txt">どんな炊飯器でも</div>
-              </a>
-            </li>
-            <li>
-              <a href="../safety/index.html" class="section-others__item">
-                <img
-                  src="../assets/img/common/others/pic--06.jpg"
-                  alt=""
-                  class="section-others__image"
-                />
-                <div class="section-others__txt">安全・安心のために</div>
-              </a>
-            </li>
-          </ul>
+          <div class="container">
+            <h2 class="section-main-title">その他のコンテンツ</h2>
+            <ul class="section-others__list">
+              <li>
+                <a href="../place/index.html" class="section-others__item">
+                  <img
+                    src="../assets/img/common/others/pic--01.jpg"
+                    alt=""
+                    class="section-others__image"
+                  />
+                  <div class="section-others__txt">お米が育つ場所</div>
+                </a>
+              </li>
+              <li>
+                <a href="index.html" class="section-others__item">
+                  <img
+                    src="../assets/img/common/others/pic--02.jpg"
+                    alt=""
+                    class="section-others__image"
+                  />
+                  <div class="section-others__txt">久保さんち</div>
+                </a>
+              </li>
+              <li>
+                <a href="../feature/index.html" class="section-others__item">
+                  <img
+                    src="../assets/img/common/others/pic--03.jpg"
+                    alt=""
+                    class="section-others__image"
+                  />
+                  <div class="section-others__txt">違いを作るお米育て</div>
+                </a>
+              </li>
+              <li>
+                <a href="../delivery/index.html" class="section-others__item">
+                  <img
+                    src="../assets/img/common/others/pic--04.jpg"
+                    alt=""
+                    class="section-others__image"
+                  />
+                  <div class="section-others__txt">こんなお届けできます</div>
+                </a>
+              </li>
+              <li>
+                <a href="../cook/index.html" class="section-others__item">
+                  <img
+                    src="../assets/img/common/others/pic--05.jpg"
+                    alt=""
+                    class="section-others__image"
+                  />
+                  <div class="section-others__txt">どんな炊飯器でも</div>
+                </a>
+              </li>
+              <li>
+                <a href="../safety/index.html" class="section-others__item">
+                  <img
+                    src="../assets/img/common/others/pic--06.jpg"
+                    alt=""
+                    class="section-others__image"
+                  />
+                  <div class="section-others__txt">安全・安心のために</div>
+                </a>
+              </li>
+            </ul>
+          </div>
         </section>
-        <!-- #EndLibraryItem -->
       </section>
     </main>
 
@@ -313,7 +318,7 @@
               <p class="footer-contact__address font-bold">
                 〒943-0186 <br class="u-br-sp" />新潟県上越市大字市野江353番地1
               </p>
-              <a href="./contact/index.html" class="btn-shopping mb-sm">
+              <a href="./contact/index.html" class="btn-outline mb-sm">
                 <span>
                   <span> お問い合わせはこちら </span>
                   <span></span>
@@ -330,7 +335,7 @@
         <div class="container">
           <div class="footer-bottom-row">
             <div>
-              <img src="../assets/img/common/header/logo.png" alt="logo" />
+              <img src="../assets/img/common/header/logo.svg" alt="logo" />
             </div>
             <div class="menu-list">
               <ul>
