--- a/contact/index.html
+++ b/contact/index.html
@@ -57,15 +57,7 @@
   </head>
 
   <body class="">
-    <noscript
-      ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-W9XWR8B"
-        height="0"
-        width="0"
-        style="display: none; visibility: hidden"
-      ></iframe
-    ></noscript>
-    <a id="pagetop"></a>
+    <div id="pagetop"></div>
     <span class="to-top"> &#8679; </span>
     <header>
       <nav class="container">
@@ -91,7 +83,7 @@
                 <a href="./contact/index.html">お問い合わせ</a>
               </li>
               <li>
-                <a href="./contact/index.html" class="btn-shopping">
+                <a href="./contact/index.html" class="btn-outline">
                   <span>
                     <span> お問い合わせ </span>
                     <span></span>
@@ -286,7 +278,7 @@
               <p class="footer-contact__address font-bold">
                 〒943-0186 <br class="u-br-sp" />新潟県上越市大字市野江353番地1
               </p>
-              <a href="./contact/index.html" class="btn-shopping mb-sm">
+              <a href="./contact/index.html" class="btn-outline mb-sm">
                 <span>
                   <span> お問い合わせはこちら </span>
                   <span></span>
@@ -303,7 +295,7 @@
         <div class="container">
           <div class="footer-bottom-row">
             <div>
-              <img src="../assets/img/common/header/logo.png" alt="logo" />
+              <img src="../assets/img/common/header/logo.svg" alt="logo" />
             </div>
             <div class="menu-list">
               <ul>
