--- a/shopping/index.html
+++ b/shopping/index.html
@@ -57,15 +57,7 @@
   </head>
 
   <body class="">
-    <noscript
-      ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-W9XWR8B"
-        height="0"
-        width="0"
-        style="display: none; visibility: hidden"
-      ></iframe
-    ></noscript>
-    <a id="pagetop"></a>
+    <div id="pagetop"></div>
     <main role="main" class="">
       <section class="container page-shopping">
         <div class="catch">
@@ -187,7 +179,7 @@
             <p class="footer-contact__address font-bold">
               〒943-0186 <br class="u-br-sp" />新潟県上越市大字市野江353番地1
             </p>
-            <a href="" class="btn-shopping mb-sm"
+            <a href="" class="btn-outline mb-sm"
               >お問い合わせはこちら<img
                 src="../assets/img/common/btn/ico-btn-arrow-primary.svg"
                 alt=""
